--- a/client/src/components/LeftSidebar/LeftSidebar.module.scss
+++ b/client/src/components/LeftSidebar/LeftSidebar.module.scss
@@ -1,4 +1,4 @@
-@import "../../App.scss";
+@use "../../App.scss" as *;
 
 .leftMenu {
   display: flex;
@@ -22,9 +22,9 @@
   .iconWrapper {
     display: flex;
     justify-content: center;
-    margin-top: 20px; 
+    margin-top: 20px;
   }
-  
+
   .iconWrapper img {
     width: 100px;
     height: 100px;
@@ -37,7 +37,7 @@
   .menuForm {
     padding: 20px 10px;
     background-color: $background-button;
-    width: 80%;   
+    width: 80%;
     margin-left: 10px;
     border-radius: 10px;
     display: flex;
@@ -61,13 +61,13 @@
   a {
     cursor: pointer;
   }
-  
+
   .gamesLink {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;   
-  } 
+    gap: 30px;
+  }
 }
 
 
@@ -80,7 +80,7 @@
   border-radius: 5px; /* Rounded corners for buttons */
   position: relative; /* For positioning glow effect */
   transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
-  
+
 }
 
 .gamesLink a:hover {
