--- a/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
+++ b/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
@@ -1,10 +1,10 @@
-.generalContainer {  
+.generalContainer {
   display: flex;
   padding: 30px;
   background: linear-gradient(to bottom, #141e30, #243b55);
   color: #ffffff;
   border-radius: 15px;
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); 
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
 }
 
 .sidebar {
@@ -46,7 +46,7 @@
   padding: 10px;
   color: #b0b0b0;
   font-size: 0.9rem;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .userInfo p {
@@ -62,7 +62,7 @@
   padding: 20px;
   background-color: rgba(20, 30, 48, 0.8);
   border-radius: 10px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .label {
@@ -84,7 +84,7 @@
 .input:focus {
   outline: none;
   border-color: #4a90e2;
-  box-shadow: 0px 0px 5px 1px rgba(74, 144, 226, 0.7);
+  box-shadow: 0 0 5px 1px rgba(74, 144, 226, 0.7);
 }
 
 .error {
