--- a/client/src/pages/ProfilePage/PlaceOfResidence/PlaceOfResidence.module.scss
+++ b/client/src/pages/ProfilePage/PlaceOfResidence/PlaceOfResidence.module.scss
@@ -5,7 +5,7 @@
   background: linear-gradient(to bottom, #141e30, #243b55);
   color: #ffffff;
   border-radius: 15px;
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
 }
 
 .content {
@@ -13,7 +13,7 @@
   background-color: rgba(20, 30, 48, 0.8);
   border-radius: 10px;
   padding: 20px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .title {
