--- a/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
+++ b/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
@@ -1,5 +1,6 @@
-.generalContainer {
-  display: flex;
+.container {
+  display: flex; 
+  flex-direction: column;
   padding: 30px;
   background: linear-gradient(to bottom, #141e30, #243b55);
   color: #ffffff;
@@ -54,7 +55,7 @@
 }
 
 .content {
-  flex: 1;
+display: flex;
 }
 
 .form {
