--- a/client/src/pages/ProfilePage/ProfileMenu.module.scss
+++ b/client/src/pages/ProfilePage/ProfileMenu.module.scss
@@ -1,7 +1,8 @@
 .navContainer {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  width: 100%;
+  margin: 30px;
 }
 
 .menu {
