--- a/client/src/pages/Games/Game2/Game2.module.scss
+++ b/client/src/pages/Games/Game2/Game2.module.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: #61dafb;
+    margin-top: 40px;
 
     .game2 button {
         font-size: 6vh;
