--- a/client/src/pages/Games/Game1/Game1.module.scss
+++ b/client/src/pages/Games/Game1/Game1.module.scss
@@ -12,8 +12,8 @@
   justify-content: center;
   align-items: center;
   gap: 40px;
-  color:orange;
-  margin-bottom: 30px;
+  color:orange; 
+  margin-top: 40px;
   font-size: 30px;
 
   // display: grid;
