--- a/client/src/components/ButtonAddFriend/ButtonAddFriend.module.scss
+++ b/client/src/components/ButtonAddFriend/ButtonAddFriend.module.scss
@@ -1,17 +1,19 @@
+@use "../../App.scss" as *;
+
 .btn {
-  background-color: #4f36ee;
-  color: white;
+  background-color: $background-btn-first;
+  color: $primary;
   border: none;
   padding: 12px 24px;
   border-radius: 30px;
   cursor: pointer;
   margin: 10px 0;
-  font-size: 16px;
+  font-size: $normal;
   transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
 }
 
 .btn:hover {
-  background-color: #331fcc;
+  background-color: $background-btn-hover-first;
   box-shadow: 0 8px 16px rgba(106, 90, 205, 0.6);
   transform: scale(1.05);
 }
