--- a/client/src/components/ButtonDeleteFriend/ButtonDeleteFriend.module.scss
+++ b/client/src/components/ButtonDeleteFriend/ButtonDeleteFriend.module.scss
@@ -1,26 +1,26 @@
-/* ButtonDeleteFriend.module.scss */
 @use "../../App.scss" as *;
+
 .btn {
-  background-color: red; /* Червоний фон */
-  color: white;           /* Білий колір тексту */
-  border: none;           /* Без рамки */
-  width: 20px;            /* Ширина кнопки */
-  height: 20px;           /* Висота кнопки */
-  border-radius: 50%;    /* Круглая форма */
-  font-size: $font-size-small-medium;       /* Размер шрифта */
-  display: flex;          /* Використовуємо flex для центровання */
-  justify-content: center; /* Центруємо контент по горизонталі */
-  align-items: center;    /* Центруємо контент по вертикалі */
-  cursor: pointer;       /* Курсор у вигляді руки */
+  background-color: $background-btn-secondary;
+  color: $primary;
+  border: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  font-size: $font-size-small-medium;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
   transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
 }
 
 .btn:hover {
-  background-color: rgb(105, 56, 56); /* Темніший фон при наведенні */
-  box-shadow: 0 8px 16px rgba(205, 90, 107, 0.6); /* Тінь при наведенні */
-  transform: scale(1.1); /* Трохи збільшуємо кнопку при наведенні */
+  background-color: $background-btn-hover-secondary;
+  box-shadow: 0 8px 16px rgba(205, 90, 107, 0.6);
+  transform: scale(1.1);
 }
 
 .btn:focus {
-  outline: none; /* При натисканні не буде видно стандартної рамки */
+  outline: none;
 }
