--- a/client/src/components/Modal/Modal.module.scss
+++ b/client/src/components/Modal/Modal.module.scss
@@ -1,45 +1,45 @@
 @use "../../App.scss" as *;
 
 .modalBackdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modalContent {
-    background: rgb(79, 101, 79);
-    padding: 20px;
-    border-radius: 8px;
-    text-align: center;
-  }
-  
-  .buttons {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 15px;
-  }
-  
-  .confirmButton {
-    background: #ff4d4f;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .cancelButton {
-    background: #ccc;
-    color: black;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: $background-seventh;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  z-index: 10;
+}
+
+.modalContent {
+  background: $background-sixth;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 15px;
+}
+
+.confirmButton {
+  background: $background-eighth;
+  color: $primary;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.cancelButton {
+  background: seventh;
+  color: $fifth;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+}
