--- a/client/src/pages/ProfilePage/PhotoLibrary/PhotoLibrary.module.scss
+++ b/client/src/pages/ProfilePage/PhotoLibrary/PhotoLibrary.module.scss
@@ -51,7 +51,7 @@
     padding: 10px;
     cursor: pointer;
     border-radius: 50%;
-    z-index: 10; /* Ensure the arrows are above the image */
+    z-index: 10;
   }
 
   .prev {
