--- a/client/src/components/RightSidebar/RightSidebar.module.scss
+++ b/client/src/components/RightSidebar/RightSidebar.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   width: 12%;
   height: 79%;
-  max-height: 79%;
+  // max-height: 79%;
   padding-top: 20px;
   background-color: $background-fourth;
   border-radius: 10px;
