--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,5 @@
+@use "./styles/shinyCta.scss" as *;
+
 // Variables for Fonts
 $small: 12px; //
 $smaller: 14px;
@@ -158,8 +160,6 @@ $border-radius-small: 5px;
 $border-radius-medium: 8px;
 $border-radius-large: 12px;
 
-/* Box Shadows */
-// $box-shadow: 0px 4px 12px $shadow-color;
 
 /* Breakpoints */
 $mobile-breakpoint: 768px;
@@ -169,13 +169,10 @@ $large-screen-breakpoint: 1440px;
 // __________________________________________\\
 
 .container {
-  display: flex;
-  // box-sizing: border-box;
-  // padding: 10px;
-  gap: 10px;
-  // width: 1900px;
+  display: flex; 
+  gap: 10px;  
   width: 100vw;
-  position: relative;
+  position: relative;  
 }
 
 .inner {
@@ -188,10 +185,10 @@ $large-screen-breakpoint: 1440px;
 
 .mainContainer {
   display: flex;
-  gap: 10px;
-  // height: 100vh;
+  gap: 10px;  
   width: 100%;
   border-radius: 10px;
+  margin-top: 180px;
 }
 
 .menuSocial {
@@ -200,292 +197,18 @@ $large-screen-breakpoint: 1440px;
   height: 100%;
   border-radius: 10px;
 }
-// ___________________________________________\\
+//___________________________________________\\
 
 /* Base Styles */
-body {
-  // font-family: $primary-font;
-  // background-color: $third-color;
-  // color: $sixth-color;
-  // margin: 0;
-  // padding: 0;
+body {  
   display: flex;
   box-sizing: border-box;
   overflow-x: hidden;
   color: white;
   background-color: $nodle-black-700;
-  // width: 100vh;
-  // height: 100vh;
+  
 }
 
-.logo {
-  // font-size: $font-size-large;
-  font-weight: bold;
-}
-
-.searchBar input {
-  // padding: $padding-small;
-  border-radius: 20px;
-  border: none;
-  width: 250px;
-}
-
-.navIcons {
-  display: flex;
-  // gap: $padding-medium;
-}
-
-.navIcons .icon {
-  cursor: pointer;
-  // padding: $padding-small $padding-medium;
-  // background-color: $secondary-color;
-  // border-radius: $border-radius-small;
-  transition: background-color 0.3s ease;
-}
-
-// .leftSidebar, .rightSidebar {
-//   width: 220px;
-
-// }
-
-.leftSidebar ul {
-  list-style: none;
-}
-
-.leftSidebar li {
-  // padding: $padding-medium 0;
-  cursor: pointer;
-  // font-weight: bold;
-}
-
-// .leftSidebar li:hover {
-//   // background-color: $third-color;
-// }
-
-.feed {
-  flex-grow: 1;
-  // margin: 0 $padding-medium;
-}
-
-.suggestions {
-  font-weight: bold;
-}
-
-.mainFeed {
-  margin: 0 $padding-small;
-}
-
-////////////////////////////////////////////
-
-:root {
-  --shiny-cta-bg: #000000;
-  --shiny-cta-bg-subtle: #1a1818;
-  --shiny-cta-fg: #ffffff;
-  --shiny-cta-highlight: blue;
-  --shiny-cta-highlight-subtle: #8484ff;
-}
-
-@property --gradient-angle {
-  syntax: "<angle>";
-  initial-value: 0deg;
-  inherits: false;
-}
-
-@property --gradient-angle-offset {
-  syntax: "<angle>";
-  initial-value: 0deg;
-  inherits: false;
-}
-
-@property --gradient-percent {
-  syntax: "<percentage>";
-  initial-value: 5%;
-  inherits: false;
-}
-
-@property --gradient-shine {
-  syntax: "<color>";
-  initial-value: white;
-  inherits: false;
-}
-
-.shinyCta {
-  --animation: gradient-angle linear infinite;
-  --duration: 3s;
-  --shadow-size: 2px;
-  isolation: isolate;
-  position: relative;
-  overflow: hidden;
-  /* Убираем курсор указателя */
-  cursor: default;
-  outline-offset: 4px;
-  /* padding можно настроить по необходимости */
-  font-family: inherit;
-  font-size: 1.125rem;
-  line-height: 1.2;
-  border: 3px solid transparent;
-  /* Убираем закругленные углы */
-  border-radius: 0;
-  color: var(--shiny-cta-fg);
-  background: linear-gradient(var(--shiny-cta-bg), var(--shiny-cta-bg))
-      padding-box,
-    conic-gradient(
-        from calc(var(--gradient-angle) - var(--gradient-angle-offset)),
-        transparent,
-        var(--shiny-cta-highlight) var(--gradient-percent),
-        var(--gradient-shine) calc(var(--gradient-percent) * 2),
-        var(--shiny-cta-highlight) calc(var(--gradient-percent) * 3),
-        transparent calc(var(--gradient-percent) * 4)
-      )
-      border-box;
-  box-shadow: inset 0 0 0 1px var(--shiny-cta-bg-subtle);
-
-  &::before,
-  &::after,
-  span::before {
-    content: "";
-    pointer-events: none;
-    position: absolute;
-    inset-inline-start: 50%;
-    inset-block-start: 50%;
-    translate: -50% -50%;
-    z-index: -1;
-  }
-
-  /* Убираем активное состояние */
-  /* &:active { translate: 0 1px; } */
-}
-
-/* Убираем анимацию при наведении */
-.shinyCta:is(:hover, :focus-visible) {
-  --gradient-percent: 5%;
-  --gradient-angle-offset: 0;
-  --gradient-shine: var(--shiny-cta-bg-subtle);
-
-  /* Убираем включение анимации при наведении */
-  &,
-  &::before,
-  &::after {
-    animation-play-state: paused;
-  }
-
-  span::before {
-    opacity: 0;
-  }
-}
-
-/* Dots pattern */
-.shinyCta::before {
-  --size: calc(100% - var(--shadow-size) * 3);
-  --position: 2px;
-  --space: calc(var(--position) * 2);
-  width: var(--size);
-  height: var(--size);
-  background: radial-gradient(
-      circle at var(--position) var(--position),
-      white calc(var(--position) / 4),
-      transparent 0
-    )
-    padding-box;
-  background-size: var(--space) var(--space);
-  background-repeat: space;
-  mask-image: conic-gradient(
-    from calc(var(--gradient-angle) + 45deg),
-    black,
-    transparent 10% 90%,
-    black
-  );
-  border-radius: inherit;
-  opacity: 0.4;
-  z-index: -1;
-}
-
-/* Inner shimmer */
-.shinyCta::after {
-  --animation: shimmer linear infinite;
-  width: 100%;
-  aspect-ratio: 1;
-  background: linear-gradient(
-    -50deg,
-    transparent,
-    var(--shiny-cta-highlight),
-    transparent
-  );
-  mask-image: radial-gradient(circle at bottom, transparent 40%, black);
-  opacity: 0.6;
-}
-
-.shinyCta span {
-  z-index: 1;
-
-  &::before {
-    --size: calc(100% + 1rem);
-    width: var(--size);
-    height: var(--size);
-    box-shadow: inset 0 -1ex 2rem 4px var(--shiny-cta-highlight);
-    opacity: 0;
-  }
-}
-
-/* Animate */
-.shinyCta {
-  --transition: 800ms cubic-bezier(0.25, 1, 0.5, 1);
-  transition: var(--transition);
-  transition-property: --gradient-angle-offset, --gradient-percent,
-    --gradient-shine;
-
-  &,
-  &::before,
-  &::after {
-    animation: var(--animation) var(--duration),
-      var(--animation) calc(var(--duration) / 0.4) reverse paused;
-    animation-composition: add;
-  }
-
-  span::before {
-    transition: opacity var(--transition);
-    animation: calc(var(--duration) * 1.5) breathe linear infinite;
-  }
-}
-
-.shinyCta:is(:hover, :focus-visible) {
-  --gradient-percent: 20%;
-  --gradient-angle-offset: 95deg;
-  --gradient-shine: var(--shiny-cta-highlight-subtle);
-
-  &,
-  &::before,
-  &::after {
-    animation-play-state: running;
-  }
-
-  span::before {
-    opacity: 1;
-  }
-}
-
-@keyframes gradient-angle {
-  to {
-    --gradient-angle: 360deg;
-  }
-}
-
-@keyframes shimmer {
-  to {
-    rotate: 360deg;
-  }
-}
-
-@keyframes breathe {
-  from,
-  to {
-    scale: 1;
-  }
-  50% {
-    scale: 1.2;
-  }
-}
-//////////////////////////////////////////////////////////////////////////////////////
 // АДАПТИВНИЙ ДИЗАЙН
 /////////////////////////////////////////////////////////////////////////////////////////
 // Мобільні телефони (480px–767px)
