--- a/client/src/components/LeftSidebar/LeftSidebar.module.scss
+++ b/client/src/components/LeftSidebar/LeftSidebar.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 16%;
-  height: 96vh;
+  height: 98vh;
   background-color: $background-fourth;
   border-radius: 10px;
   position: sticky;
@@ -17,6 +17,14 @@
     justify-content: space-around;
     align-items: center;
     margin-top: 20px;
+    cursor: pointer;
+  }
+
+  .functionBlock svg:hover {
+    border-radius: 50%;
+    color: $sixth;
+    transform: scale(1.1);
+    box-shadow: 0 0 15px rgba(0, 255, 234, 0.8), 0 0 25px rgba(0, 255, 234, 0.5);
   }
 
   .iconWrapper {
@@ -32,6 +40,12 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+  }
+
+  .iconWrapper img:hover {
+    color: $sixth;
+    transform: scale(1.1);
+    box-shadow: 0 0 15px rgba(0, 255, 234, 0.8), 0 0 25px rgba(0, 255, 234, 0.5);
   }
 
   .menuForm {
