--- a/client/src/components/MainContent/MainContent.module.scss
+++ b/client/src/components/MainContent/MainContent.module.scss
@@ -1,7 +1,7 @@
 @use "../../App.scss" as *;
 
 .mainBox {
-  margin-top: 180px;
+  // margin-top: 180px;
   width: 81%;
   height: 100%;
   padding: 0 10px;
