--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -39,8 +39,10 @@ $twelfth: #394a6d;
 $thirteenth: #ff6666;
 
 // Variables for Background-colors
+
+$background-body: #191d32;
 $background-primary: #131619;
-$background-secondary: grey;
+$background-secondary: #282f44;
 $background-third: green;
 $background-fourth: #0d0f10;
 $background-fifth: #2f2f2f;
@@ -82,10 +84,17 @@ $shadow-color: rgba(0, 0, 0, 0.1); //
 $linear-gradient-header: linear-gradient(
   to right,
   #dcdcdc,
-  blue,
+  rgb(114, 231, 46),
   #dcdcdc,
-  blue
+  rgb(79, 141, 94)
 );
+// $linear-gradient-header: linear-gradient(
+//   to right,
+//   #dcdcdc,
+//   blue,
+//   #dcdcdc,
+//   blue
+// );
 $linear-gradient-groupPage: linear-gradient(
   135deg,
   rgba(0, 0, 0, 0.8),
@@ -96,7 +105,7 @@ $linear-gradient-userInform: linear-gradient(to bottom, #141e30, #243b55);
 
 h2,
 h3 {
-  color: $third;
+  color: green;
 }
 
 /* Colors */
@@ -170,32 +179,61 @@ $large-screen-breakpoint: 1440px;
 
 .container {
   display: flex; 
-  gap: 10px;  
+  // gap: 10px;  
   width: 100vw;
-  position: relative;  
+  position: relative;
+  flex-direction: column;  
 }
-
-.inner {
+.inner{
   display: flex;
   flex-direction: column;
-  position: relative;
-  gap: 10px;
+  // position: relative;
+}
+.innerBox {
+  display: flex;
+  justify-content: flex-end;
+  
+  // flex-direction: column;
+  // position: relative;
+  // gap: 10px;
   width: 100%;
+  height: 85vh;
+  padding: 10px;
+
+
+
+}
+.innerMenu{
+ padding: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 11%;
+  gap: 10px;
+  position: fixed;
+  top: 140px;
+  left: 0;
+  // position: relative;  
+  z-index: 100;
+  padding-right: 20px;
+
 }
 
 .mainContainer {
+  // padding-top: 10px;
   display: flex;
   gap: 10px;  
-  width: 100%;
-  border-radius: 10px;
-  margin-top: 180px;
+  width: 88%;
+  border-radius: 20px;
+  // margin-top: 180px;
+  // opacity: 0.9;
 }
 
 .menuSocial {
+ 
   background-color: $nodle-black-700;
-  width: 100%;
+  width: 98%;
   height: 100%;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 //___________________________________________\\
 
@@ -204,9 +242,34 @@ body {
   display: flex;
   box-sizing: border-box;
   overflow-x: hidden;
-  color: white;
-  background-color: $nodle-black-700;
-  
+  color: $primary;
+  // background-color: $nodle-black-700;
+  background-color: $background-body;
+  // background-image: url("https://res.cloudinary.com/dsr6kwzrr/image/upload/v1732992422/4k-Space-Wallpaper-scaled_rjuqft.jpg");
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  &.expanded {
+    height: 100vh; /* Высота в развернутом состоянии */
+    overflow-y: scroll; /* Скролл включается только при развернутом блоке */
+    transition: height 1s ease; /* Плавное изменение высоты */
+  }
+
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $background-secondary;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: $background-sixth;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
 }
 
 // АДАПТИВНИЙ ДИЗАЙН
