--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -1,19 +1,31 @@
 @use "../../App.scss" as *;
 
 .headerBox {
-  position: fixed;
-  width: 85%;
-  border-radius: 10px;
-  overflow: hidden;
-  padding-right: 5px;
-  top: 0; 
-  z-index: 100; 
-}
-
-header {
-  display: flex;
-  padding: 20px; 
+  // margin: 0 auto;
+  position: sticky;
   width: 100%;
+  // border-radius: 50%;
+  // overflow: hidden;
+  // padding-right: 50px;
+  top: 0; 
+  right: 0;
+  z-index: 100; 
+  
+ 
+}
+.shinyCta{
+  border-radius: 20px;
+ width: 99%;
+
+}
+header {
+
+
+
+  display: flex;
+  // padding: 20px; 
+  width: 100%;
+  
 
   h1 {
     background: $linear-gradient-header;
@@ -24,7 +36,6 @@ header {
     font-size: $huge;
     font-weight: $font-weight-bold;
     cursor: pointer;
-
     animation: gradientMove 3s infinite;
   }
 
@@ -43,10 +54,10 @@ header {
   .radioBtn {
     width: 80px;
     height: 26px;
-    background: $background-btn-fourth;
+    background: $background-secondary;
     position: relative;
     border-radius: 50px;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0.5), 0 1px 0 rgba(255,255,255,0.2);
+    box-shadow: inset 0 1px 1px rgba(128, 125, 125, 0.5), 0 1px 0 rgba(104, 133, 130, 0.2);
 
     &:after {
       content: 'UA';
@@ -56,7 +67,7 @@ header {
       z-index: 0;
       font: 12px/26px Arial, sans-serif;
       font-weight: $font-weight-bold;
-      text-shadow: 1px 1px 0 rgba(255,255,255,.15);
+      text-shadow: 1px 1px 0 rgba(170, 66, 66, 0.15);
     }
 
     &:before {
@@ -71,14 +82,14 @@ header {
 
     label {
       display: block;
-      width: 34px;
+      width: 30px;
       height: 20px;
       cursor: pointer;
       position: absolute;
       top: 3px;
       left: 3px;
       z-index: 1;
-      background: $border-color-blue;
+      background: $background-third;
       border-radius: 50px;
       transition: all 0.4s ease;
       box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3);
@@ -119,27 +130,34 @@ header {
 
   .logoBox {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #282f44;
+
+    
   }
 
   .header {
     display: flex;
     flex-direction: column;
     width: 100%;
+    background-color: #282f44;
+
   }
 
   .headerTop {
     display: flex;
-    justify-content: space-between;
+    justify-content:center;
     align-items: center;
     gap: 30px;
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
     // border-bottom: 1px solid $fifth;
   }
 
   .imgLogo {
-    width: 250px;
-    height: 150px;
+    width: 150px;
+    height: 100px;
     border-radius: 50%;
     cursor: pointer;
   }
@@ -154,4 +172,71 @@ header {
     justify-content: space-evenly;
   }
 }
+
+
+.gamesSelect {
+  margin: 0 auto;
+  position: relative;
+  opacity: 0.8;
+  
+}
+
+.gameDropdown {
+  width: 100%;
+  padding: 8px 12px;
+  border-radius: 20px;
+  border: 1px solid #131212;
+  background-color: #1a1a1a; /* Тёмный фон */
+  color: #807979; /* Белый текст */
+  appearance: none; /* Убирает стрелку браузера */
+  cursor: pointer;
+  transition: background-color 0.5s ease, border-color 0.5s ease;
+  transition: height 1s ease; /* Анимация изменения высоты */
+}
+
+.gameDropdown:hover {
+  background-color: #333; /* Изменение фона при наведении */
+  border-color: #0a0a0a; /* Цвет рамки при наведении */
+}
+
+.gameDropdown:focus {
+  outline: none;
+  background-color: #444; /* Более яркий фон при фокусе */
+  border-color: #171718; /* Активный цвет рамки */
+}
+
+/* Стили для опций */
+.gameDropdown option {
+  padding: 8px 12px; /* Паддинги внутри опций */
+  background-color: #1a1a1a; /* Фон опции */
+  color: #615f5f; /* Цвет текста */
+  border-radius: 20px; /* Убираем закругления */
+  cursor: pointer;
+}
+
+.gameDropdown option:hover,
+.gameDropdown option:focus {
+  background-color: #444; /* Фон при наведении */
+  color: #363636; /* Цвет текста */
+}
+
+
+// .gamesSelect {
+//   margin: 0 auto;
+// }
+
+// .gameDropdown {
+//   padding: 8px;
+//   border-radius: 5px;
+//   // border: 1px solid #ccc;
+//   background-color: #35353511;
+//   color: #f1eeee;
+//   cursor: pointer;
+// }
+
+// .gameDropdown:focus {
+//   // border-color: #111316;
+//   outline: none;
+// }
+
 
