--- a/client/src/components/RightSidebar/RightSidebar.module.scss
+++ b/client/src/components/RightSidebar/RightSidebar.module.scss
@@ -4,17 +4,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 12%;
-  height: 79%;
-  // max-height: 79%;
-  padding-top: 20px;
-  background-color: $background-fourth;
+  height: 190px; /* Высота в свернутом состоянии */
+  background-color: $background-secondary;
   border-radius: 10px;
-  position: fixed;
-  top: 180px;
-  right: 10px;
-  overflow-y: auto;
-  padding-right: 10px;
+  overflow: hidden; /* Прячет содержимое, если блок свернут */
+  transition: height 1s ease; /* Анимация изменения высоты */
+padding-top: 10px;
+border: 3px solid $twelfth;
+  &.expanded {
+    height: 52vh; /* Высота в развернутом состоянии */
+    overflow-y: scroll; /* Скролл включается только при развернутом блоке */
+    transition: height 1s ease; /* Плавное изменение высоты */
+  }
 
   &::-webkit-scrollbar {
     width: 6px;
@@ -26,7 +27,7 @@
   }
 
   &::-webkit-scrollbar-thumb:hover {
-    background-color:  $background-sixth;
+    background-color: $background-sixth;
   }
 
   &::-webkit-scrollbar-track {
@@ -34,30 +35,48 @@
   }
 }
 
+
 .friendItem {
   display: flex;
+
   align-items: center;
   justify-content: space-between;
-  gap: 5px;
+  gap: 10px;
   padding: 10px;
   width: 100%;
 }
 
 .friendLink {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 5px;
+  width: 11vh;
+  gap: 10px;
   text-decoration: none;
-  color: $fourth;
+  color: $secondary;
   border: solid 1px $secondary;
   border-radius: 20px;
   padding: 5px;
   flex-grow: 1;
+
   &:hover {
-    background-color:  $background-ninth;
-    color: $third;
-    border-color: $primary;
+    color: $sixth;
+    transform: scale(1.1);
+    box-shadow: 0 0 15px rgba(83, 83, 83, 0.8), 0 0 25px rgba(52, 53, 53, 0.5);
   }
+}
+.toggleButton span{
+  margin-right: 10px;
+}
+.toggleButton{
+  color: $primary;
+  font-size: $medium;
+  padding:5px 10px;
+  border-radius: 10px;
+  background-color: #9ad14b;
+}
+.toggleButton:hover{
+  background-color:#365806;
 }
 
 .friendName {
@@ -66,8 +85,8 @@
 }
 
 .friendName,
-.lastName p {  
-  font-size: $smaller;
+.lastName p {
+  font-size: $large;
 }
 
 .deleteButton {
