--- a/client/src/pages/GroupPage/GroupPage.module.scss
+++ b/client/src/pages/GroupPage/GroupPage.module.scss
@@ -3,12 +3,12 @@
 .groupContainer {
   display: flex;
   flex-direction: column;
-  background: $linear-gradient-groupPage;
-  padding: 20px 30px;
+  // background: $background-body;
+  // padding: 20px 30px;
   width: 99%;
   box-sizing: border-box;
   border-radius: 15px;
-  box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+  // box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
   position: relative; 
 }
 
@@ -17,7 +17,8 @@
   flex-wrap: nowrap;
   gap: 10px;
   overflow-x: auto;
-  width: 60vw;
+  width: 50vw;
+  height: 300px;
   margin-bottom: 50px;
   padding: 20px 10px;
   margin: 0 auto;
@@ -28,7 +29,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $background-tenth;
+  justify-content: space-around;
+  background-color: $background-body;
   border-radius: 10px;
   padding: 20px;
   margin: 10px 0;
@@ -45,13 +47,13 @@
 
 .groupLink h2 { 
   font-size: $larger;
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.7),
-    0 0 20px rgba(255, 255, 255, 0.5);
+  // text-shadow: 0 0 10px rgba(255, 255, 255, 0.7),
+    // 0 0 20px rgba(255, 255, 255, 0.5);
   margin-bottom: 15px;
 }
 
 .avatar {
-  width: 13vw;
+  width: 5vw;
   height: auto;
   object-fit: cover;
   border-radius: 50%;
@@ -61,7 +63,7 @@
 
 .groupDetails {
   width: 95%;
-  background-color: rgba(0, 0, 60, 0.8);
+  background-color: $background-body;
   padding: 30px;
   border-radius: 15px;
   margin-top: 30px;
@@ -73,13 +75,13 @@
   font-size: $extra-large;
   font-weight: $font-weight-medium;
   margin: 30px;
-  color: yellow;
+  // color: $sunglow-600;
   text-shadow: 0 0 20px rgba(255, 255, 255, 0.7),
     0 0 40px rgba(255, 255, 255, 0.5);
 }
 
 .groupDetails p {
-  color: $seventh;
+  color: $primary;
   font-size: $medium;
   line-height: 1.6;
   margin-bottom: 30px;
@@ -93,13 +95,14 @@
 
 .post {
   display: flex;
-  column-gap: 20px;
+  column-gap: 40px;
   flex-direction: column;
   padding: 20px;
   background-color: $background-eleventh;
   border-radius: 8px;
   margin-bottom: 10px;
   color: $fourth;
+  margin-bottom: 40px;
 }
 
 .post h3 {
@@ -182,4 +185,33 @@
 
 .commentForm button:hover {
   background-color: $background-btn-hover-fifth;
+}
+.comment{
+  display: flex;
+  // background-color: yellow;
+  border: 2px solid $background-third;
+  border-radius: 10px;
+  margin-bottom: 10px;
+
+}
+.comment p{
+  // color: red;
+}
+
+.commentHeader {
+  display: flex;
+  align-items: center;
+}
+
+.commentAvatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.commentAuthor {
+  font-size: 0.9rem;
+  color: #888;
+  font-weight: bold;
 }
