--- a/client/src/pages/UserPage/UserPage.module.scss
+++ b/client/src/pages/UserPage/UserPage.module.scss
@@ -44,17 +44,23 @@
   }
 }
 
-.userPhoto {
-  width: 600px;
-  height: auto;
-  border-radius: 50%;
+.userPhotoContainer {
+  width: 350px;
+  height:500px;
+  overflow: hidden; /* Скрывает лишние части изображения */
+  border-radius: 10px;
   border: 3px solid #8e9aaf;
   box-shadow: 0 0 10px rgba(138, 174, 255, 0.6);
-  object-fit: cover;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.9s ease-in-out;
 
   &:hover {
     transform: scale(1.05);
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Полное заполнение контейнера */
   }
 }
 
