working with the edit page

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -60,8 +60,8 @@ $background-sixteenth: rgba(30, 40, 60, 0.8);
 
 
 // Variables for Background-color-btn
-$background-btn-first: #4f36ee;
-$background-btn-hover-first: #331fcc;
+$background-btn-first:  #ff4d4f; 
+$background-btn-hover-first:  #8a1e21; 
 $background-btn-secondary: rgb(197, 127, 127);
 $background-btn-hover-secondary: rgb(105, 56, 56);
 $background-btn-third: #3b4e7e;
