--- a/client/src/pages/GroupPage/GroupPage.module.scss
+++ b/client/src/pages/GroupPage/GroupPage.module.scss
@@ -217,3 +217,13 @@
   font-weight: $font-weight-bold;
 }
 
+.editButton {
+  background-color: #4caf50;
+  color: white;
+  margin-right: 10px;
+}
+
+.deleteButton {
+  background-color: #f44336;
+  color: white;
+}
